--- a/u/ul/ult/ultimaterollercoaster.com.html
+++ b/u/ul/ult/ultimaterollercoaster.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ultimaterollercoaster.com privacy policy that was archived on 2016-05-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160515113838id_/http%3A//www.ultimaterollercoaster.com/info/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ultimaterollercoaster.com privacy policy that was archived on 2017-05-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170503033010id_/http%3A//www.ultimaterollercoaster.com/info/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	<title>Privacy Policy | Ultimate Rollercoaster</title>
@@ -13,6 +13,14 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Header -->
+<!-- Google Anchor - Vingette Code -->
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-0624280988623964",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 
 <body>
@@ -197,8 +205,12 @@
 			<li><a href="/souvenirs/">Souvenirs</a></li>
 		</ul>
 		
+		<div id="instagram">
+		<a rel="nofollow" href="http://www.instagram.com/ultimaterollercoaster">Like Ultimate Rollercoaster Instagram</a>
+		</div>
+		
 		<div id="pinterest">
-		<a rel="nofollow" href="http://pinterest.com/themeparks">Follow Theme Parks on Pinterest</a>
+		<a rel="nofollow" href="http://pinterest.com/themeparks">Theme Parks Pinterest</a>
 		</div>
 		
 		<div id="twitter">
@@ -206,14 +218,14 @@
 		</div>
 
 		<div id="facebook">
-		<a rel="nofollow" href="http://www.facebook.com/ultimaterollercoaster">Like Ultimate Rollercoaster on Facebook</a>
+		<a rel="nofollow" href="http://www.facebook.com/ultimaterollercoaster">Like Ultimate Rollercoaster Facebook</a>
 		</div>
 		
 		<p class="footlegal">
 		<a rel="nofollow" href="/info/">About Us</a> – 
 		<a rel="nofollow" href="/info/contact.php">Contact Us</a> – 
 		<a href="/info/sitemap.php">Site Map</a><br>
-		© 1996–2016 Ultimate Rollercoaster®, LLC. Use of this site is governed by our <a rel="nofollow" href="/info/tos.php">Terms Of Service</a> and <a rel="nofollow" href="/info/privacy.php">Privacy Policy</a>.</p>
+		© 1996–2017 Ultimate Rollercoaster®, LLC. Use of this site is governed by our <a rel="nofollow" href="/info/tos.php">Terms Of Service</a> and <a rel="nofollow" href="/info/privacy.php">Privacy Policy</a>.</p>
 		</div>
 	</div>
 
@@ -236,7 +248,7 @@
 
 	</div>
 </div>
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 <script type="text/javascript">
 $(function() {
 	// Insert Responsive Navigation Icon, Close Icon, and Overlay
