--- a/w/wi/wik/wikicfp.com.html
+++ b/w/wi/wik/wikicfp.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wikicfp.com privacy policy that was archived on 2016-05-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160511213655id_/http%3A//www.wikicfp.com/cfp/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wikicfp.com privacy policy that was archived on 2017-05-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170531181122id_/http%3A//www.wikicfp.com/cfp/privacy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	<title>WikiCFP : Call For Papers of Conferences, Workshops and Journals</title>
@@ -33,6 +33,8 @@ function recordOutboundLink(link, category, action, newtab) {
 }
 </script>
 
+<script src="https://www.semanticscholar.org/js/wikicfp-embed.js" async=""></script>
+
 </head>
 
 <body bgcolor="#ffffee">
@@ -47,6 +49,7 @@ function recordOutboundLink(link, category, action, newtab) {
 	  </div>
       <div class="topright" style="float: right;">
            
+	<div id="s2-search" style="margin-top: 20px;"></div>
       </div>
 	</div>
 
@@ -98,9 +101,9 @@ function recordOutboundLink(link, category, action, newtab) {
 
 
         <td align="left"><select class="searchbox" name="year" tabindex="101">	
-               	<option value="t" selected="selected"> 2016</option>
-               	<option value="n"> 2017 </option>
-               	<option value="f"> 2016+  </option>
+               	<option value="t" selected="selected"> 2017</option>
+               	<option value="n"> 2018 </option>
+               	<option value="f"> 2017+  </option>
                	<option value="a"> all </option>
         </select></td>
 
@@ -112,7 +115,7 @@ function recordOutboundLink(link, category, action, newtab) {
 </div>
 
 <div class="infosec" style="width: 160px; margin: 0px; padding: 0px; margin-top: 5px;">
-<a href="https://www.semanticscholar.org/?utm_source=WikiCFP&amp;utm_medium=Display&amp;utm_term=home&amp;utm_content=semantic-scholar-rail-try-it&amp;utm_campaign=WikiCFP%20Test"><img src="/cfp/images/ai2_160.png" width="160" height="600" border="0" alt=""></a> 
+<a href="https://www.semanticscholar.org/?utm_source=WikiCFP&amp;utm_medium=Display&amp;utm_term=home&amp;utm_content=semantic-scholar-rail-try-it&amp;utm_campaign=WikiCFP%20Test"><img src="http://assets.semanticscholar.org/s2-creative.jpg" width="160" height="600" border="0" alt=""></a> 
 </div>
 
 
