--- a/n/na/nar/naruto-arena.com.html
+++ b/n/na/nar/naruto-arena.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the naruto-arena.com privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119022401id_/http%3A//naruto-arena.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the naruto-arena.com privacy policy that was archived on 2017-05-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170531183944id_/http%3A//www.naruto-arena.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
 		<title>Privacy policy - Naruto Arena</title>
@@ -25,15 +25,14 @@
 				</script>-->
 				<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
 		
-		<script type="text/javascript">
-			window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":"http://www.naruto-arena.com/privacy-policy","theme":"dark-bottom"};
-		</script>
-		
+    <script type="text/javascript">
+        window.cookieconsent_options = {"message":"We use cookies to personalise content and ads, to provide social media features and to analyse our traffic. We also share information about your use of our site with our social media, advertising and analytics partners.","dismiss":"Got it!","learnMore":"More info","link":"http://www.naruto-arena.com/privacy-policy","theme":"dark-bottom"};
+    </script>
 
-		<script type="text/javascript" src="//s3.amazonaws.com/cc.silktide.com/cookieconsent.latest.min.js"></script>
-		<!-- End Cookie Consent plugin -->
+    <script type="text/javascript" src="/cookieconsent.min.js"></script>
+		
 		</head>
-		<body class="sitebg1 test">
+		<body class="sitebg1">
 		<center>
 			<div id="layoutcont">
 				<div id="advertisement" style="text-align:right">
@@ -51,7 +50,7 @@
                         var cpmstar_rnd=Math.round(Math.random()*999999);
                         var cpmstar_pid=8887;
                         document.writeln("<SCR"+"IPT language='Javascript' src='//server.cpmstar.com/view.aspx?poolid="+cpmstar_pid+"&script=1&rnd="+cpmstar_rnd+"'></SCR"+"IPT>");
-                    </script><script language="Javascript" src="//server.cpmstar.com/view.aspx?poolid=8887&amp;script=1&amp;rnd=745367"></script>
+                    </script><script language="Javascript" src="//server.cpmstar.com/view.aspx?poolid=8887&amp;script=1&amp;rnd=119466"></script>
 
 				</div>
 				<div id="layout" class="sitebg1">
@@ -79,7 +78,7 @@
 					</div>
 					<div id="header">
 						<div id="headerimg"></div>
-						<div id="randomheader" style="background-image: url(/images/randomheader/header28.jpg);"></div>
+						<div id="randomheader" style="background-image: url(/images/randomheader/header36.jpg);"></div>
 					</div>
 					<div id="sitenavigation2">
 						<div id="leftlay">
@@ -175,7 +174,7 @@
 		
 	<div class="marker">
 			
-					<img class="pre" src="/images/pres/prenav.gif"> Amount of votes: <span>124422</span><br>
+					<img class="pre" src="/images/pres/prenav.gif"> Amount of votes: <span>126373</span><br>
 			<img class="pre" src="/images/pres/prenav.gif"> Poll created on: <span>01-17-2013</span>
 															</div>
 	
@@ -186,14 +185,14 @@
 									<div class="marker">
 
 		<b>Members:</b>
-		<br>Total members: <span>4127236</span>
+		<br>Total members: <span>4139580</span>
 		
 	
 			<br><br><b>Online:</b>
 		
 		<br>Admins online: <span>0</span>
 		<br>Moderators online: <span>0</span>
-		<br>Members online: <span>216</span>
+		<br>Members online: <span>219</span>
 		
 					<br><a href="/users-online/" class="statlinks">Show users online</a>
 				
@@ -267,8 +266,28 @@
 The following webpage outlines Naruto-Arena's collection and use of personal information from it's users. Naruto-Arena values the privacy of our members and users, we will never share any personal information of anybody who logs on to Naruto-Arena with anyone. This includes your e-mail address, name, and location. Upon logging on to Naruto-Arena such things as your IP address and hostname are logged for statistical and security reasons. 
 <br><br>
 <h5>Cookies</h5><br>
-A cookie is a very small text file placed on your system upon logging on to Naruto-Arena (and most other websites). This file serves as your identification card and is uniquely yours, and can only be read by the server that gave it to you. Cookies tell us that you have returned to a specific web page on Naruto-Arena and help us track your preferences and transactional habits. The basic function of cookies is to help our server remember who you are. 
+A cookie is a small text file that is stored in a user's web browser by a website or ad server. We use cookies to personalize content and ads, to provide social media features and to analyse our traffic. We also share information about your use of our site with our social media, advertising and analytics partners who may combine it with other information you’ve provided to them or they’ve collected from your use of their services.
 <br><br>
+
+<h5>What we collect</h5><br>
+We may collect the following information:<br>
+- information your web browser automatically sends to our server like the IP address and page you requested<br>
+- demographic and geographic information such as a country, age or gender via google analytics<br>
+- contact information including email address<br>
+<br>
+
+<h5>What we do with the information we gather</h5>
+<br>We require this information to understand your needs and provide you with a better service, and in particular for the following reasons:<br>
+- Internal record keeping.<br>
+- We may use the information to improve our products and services.<br>
+- We may periodically send promotional email about new products, special offers or other information which we think you may find interesting using the email address which you have provided.<br>
+- From time to time, we may also use your information to contact you for market research purposes. We may contact you by email. We may use the information to customise the website according to your interests.
+<br><br>
+
+<h5>Can I opt-out for Google Analytics features?</h5><br>
+You can opt-out by using <a href="https://tools.google.com/dlpage/gaoptout/">the following url.</a>
+<br><br>
+
 <h5>Children's Privacy</h5><br>
 Naruto-Arena does not knowingly collect personal data from children under the age of 13. We make reasonable efforts to prevent someone who is underage from joining as a member of Naruto-Arena, and will not collect information from them. If Naruto-Arena learns that a child under the age of 13 has become a member, we will close that child's account and delete any information collected about the child. 
 <br><br>
@@ -304,7 +323,7 @@ By continuing to access Naruto-Arena and any of it's affiliated websites and fil
                                         var cpmstar_rnd=Math.round(Math.random()*999999);
                                         var cpmstar_pid=8891;
                                         document.writeln("<SCR"+"IPT language='Javascript' src='//server.cpmstar.com/view.aspx?poolid="+cpmstar_pid+"&script=1&rnd="+cpmstar_rnd+"'></SCR"+"IPT>");
-                                    </script><script language="Javascript" src="//server.cpmstar.com/view.aspx?poolid=8891&amp;script=1&amp;rnd=558448"></script>
+                                    </script><script language="Javascript" src="//server.cpmstar.com/view.aspx?poolid=8891&amp;script=1&amp;rnd=250289"></script>
 
 								</center>
 							</div>
@@ -321,7 +340,7 @@ By continuing to access Naruto-Arena and any of it's affiliated websites and fil
                                     var cpmstar_rnd=Math.round(Math.random()*999999);
                                     var cpmstar_pid=8889;
                                     document.writeln("<SCR"+"IPT language='Javascript' src='//server.cpmstar.com/view.aspx?poolid="+cpmstar_pid+"&script=1&rnd="+cpmstar_rnd+"'></SCR"+"IPT>");
-                                </script><script language="Javascript" src="//server.cpmstar.com/view.aspx?poolid=8889&amp;script=1&amp;rnd=310353"></script>
+                                </script><script language="Javascript" src="//server.cpmstar.com/view.aspx?poolid=8889&amp;script=1&amp;rnd=243661"></script>
 
 								<div class="brspacer">
 									<center>
