--- a/m/ma/map/maps-streetview.com.html
+++ b/m/ma/map/maps-streetview.com.html
@@ -1,28 +1,28 @@
-<!--The following is the downloaded HTML source of the maps-streetview.com privacy policy that was archived on 2016-11-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161104211235id_/http%3A//www.maps-streetview.com/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the maps-streetview.com privacy policy that was archived on 2017-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170601051152id_/https%3A//www.maps-streetview.com/privacy_policy.php) for the most accurate reproduction.-->
 
 <html><head>
-<title>Privacy Policy - http://www.maps-streetview.com</title>
+<title>Privacy Policy - https://www.maps-streetview.com</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-<h1> Privacy Policy for http://www.maps-streetview.com </h1>
+<h1> Privacy Policy for https://www.maps-streetview.com </h1>
 <h3> Please, read this page carefully </h3>
-<p> At http://www.maps-streetview.com, the privacy of our visitors is of extreme importance to us. This privacy policy document outlines the types of personal information is received and collected by http://www.maps-streetview.com and how it is used. </p>
-<p> <b>Log Files</b><br> Like many other Web sites, http://www.maps-streetview.com makes use of log files. The information inside the log files includes internet protocol ( IP ) addresses, type of browser, Internet Service Provider ( ISP ), date/time stamp, referring/exit pages, and number of clicks to analyze trends, administer the site, track user's movement around the site, and gather demographic information. IP addresses, and other such information are not linked to any information that is personally identifiable. </p>
-<p> <b>Cookies and Web Beacons</b><br> http://www.maps-streetview.com does use cookies to store information about visitors preferences, record user-specific information on which pages the user access or visit, customize Web page content based on visitors browser type or other information that the visitor sends via their browser. </p>
+<p> At https://www.maps-streetview.com, the privacy of our visitors is of extreme importance to us. This privacy policy document outlines the types of personal information is received and collected by https://www.maps-streetview.com and how it is used. </p>
+<p> <b>Log Files</b><br> Like many other Web sites, https://www.maps-streetview.com makes use of log files. The information inside the log files includes internet protocol ( IP ) addresses, type of browser, Internet Service Provider ( ISP ), date/time stamp, referring/exit pages, and number of clicks to analyze trends, administer the site, track user's movement around the site, and gather demographic information. IP addresses, and other such information are not linked to any information that is personally identifiable. </p>
+<p> <b>Cookies and Web Beacons</b><br> https://www.maps-streetview.com does use cookies to store information about visitors preferences, record user-specific information on which pages the user access or visit, customize Web page content based on visitors browser type or other information that the visitor sends via their browser. </p>
 <b>DoubleClick DART Cookie</b><br>
 <p>
 </p><p> Some of our advertising partners may use cookies and web beacons on our site. Our advertising partners are Google, Infolinks, Criteo, HotelsCombined and Careerjet. If you want to know what browsing data is collected by our advertising partners, please read their privacy policy pages.
 <br> </p>
-<p> These third-party ad servers or ad networks use technology to the advertisements and links that appear on http://www.maps-streetview.com send directly to your browsers. They automatically receive your IP address when this occurs. Other technologies ( such as cookies, JavaScript, or Web Beacons ) may also be used by the third-party ad networks to measure the effectiveness of their advertisements and / or to personalize the advertising content that you see. </p>
-<p> http://www.maps-streetview.com has no access to or control over these cookies that are used by third-party advertisers. </p>
-<p> You should consult the respective privacy policies of these third-party ad servers for more detailed information on their practices as well as for instructions about how to opt-out of certain practices. http://www.maps-streetview.com's privacy policy does not apply to, and we cannot control the activities of, such other advertisers or web sites. </p>
+<p> These third-party ad servers or ad networks use technology to the advertisements and links that appear on https://www.maps-streetview.com send directly to your browsers. They automatically receive your IP address when this occurs. Other technologies ( such as cookies, JavaScript, or Web Beacons ) may also be used by the third-party ad networks to measure the effectiveness of their advertisements and / or to personalize the advertising content that you see. </p>
+<p> https://www.maps-streetview.com has no access to or control over these cookies that are used by third-party advertisers. </p>
+<p> You should consult the respective privacy policies of these third-party ad servers for more detailed information on their practices as well as for instructions about how to opt-out of certain practices. https://www.maps-streetview.com's privacy policy does not apply to, and we cannot control the activities of, such other advertisers or web sites. </p>
 <p> If you wish to disable cookies, you may do so through your individual browser options. More detailed information about cookie management with specific web browsers can be found at the browsers' respective websites. </p>
 <br>
 <p> If you require any more information or have any questions about our privacy policy, please feel free to contact us by email at contact [at] maps-streetview [dot] com </p>
 <br>
-<a href="http://www.maps-streetview.com/">Maps-StreetView.com Home Page</a>
+<a href="https://www.maps-streetview.com/">Maps-StreetView.com Home Page</a>
 <br> <br> <br>
 
 
