--- a/m/ma/mal/mallumoviereporter.com.html
+++ b/m/ma/mal/mallumoviereporter.com.html
@@ -1,7 +1,8 @@
-<!--The following is the downloaded HTML source of the mallumoviereporter.com privacy policy that was archived on 2016-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161204071159id_/http%3A//www.mallumoviereporter.com/p/privacy-policy_11.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mallumoviereporter.com privacy policy that was archived on 2017-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170601113744id_/http%3A//www.mallumoviereporter.com/p/privacy-policy_11.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html dir="ltr" xmlns="http://www.w3.org/1999/xhtml" xmlns:b="http://www.google.com/2005/gml/b" xmlns:data="http://www.google.com/2005/gml/data" xmlns:expr="http://www.google.com/2005/gml/expr"><head>
+<link type="text/css" rel="stylesheet" href="https://www.blogger.com/static/v1/widgets/58827200-widget_css_bundle.css">
 <meta content="D12FB5E37DF967308F4ECB72389A36A1" name="msvalidate.01">
 <meta content="Q_40vfwGAGRBUU7aWVLF6uepQCAQVmyQa9uh2ebxx1s" name="google-site-verification">
 <link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css">
@@ -13,6 +14,7 @@
 <link rel="alternate" type="application/atom+xml" title="Online Movie And TV Reporter - Atom" href="http://www.mallumoviereporter.com/feeds/posts/default">
 <link rel="alternate" type="application/rss+xml" title="Online Movie And TV Reporter - RSS" href="http://www.mallumoviereporter.com/feeds/posts/default?alt=rss">
 <link rel="service.post" type="application/atom+xml" title="Online Movie And TV Reporter - Atom" href="https://www.blogger.com/feeds/7027711809809520303/posts/default">
+<!--Can't find substitution for tag [blog.ieCssRetrofitLinks]-->
 <meta content="http://www.mallumoviereporter.com/p/privacy-policy_11.html" property="og:url">
 <meta content="Privacy Policy" property="og:title">
 <meta content="Malayalam TV Serials | Malayalam Movie News | New Malayalam Movie News | Malayalam TV Shows | Malayalam Movie Trailers" property="og:description">
@@ -35,9 +37,7 @@ Privacy Policy
 <meta content="global" name="distribution">
 <meta content="1 days" name="revisit-after">
 <meta content="India" name="geo.placename">
-<link href="https://fonts.googleapis.com/css?kit=e9l7fV-3xzXBO6qidGAzZw" rel="stylesheet" type="text/css"><link type="text/css" rel="stylesheet" href="https://www.blogger.com/static/v1/widgets/954498779-widget_css_bundle.css">
-<link type="text/css" rel="stylesheet" href="https://www.blogger.com/dyn-css/authorization.css?targetBlogID=7027711809809520303&amp;zx=2e4e773a-eab9-420c-b69e-6d686aa69be8">
-<style id="page-skin-1" type="text/css"><!--
+<link href="https://fonts.googleapis.com/css?kit=e9l7fV-3xzXBO6qidGAzZw" rel="stylesheet" type="text/css"><style id="page-skin-1" type="text/css"><!--
 /*
 /*
 -----------------------------------------------
@@ -1055,8 +1055,8 @@ jQuery('a[href*="https://"]:not([href*="https://www.mallumoviereporter.com"])').
 
     });
 </script>
-<script type="text/javascript">function a(){var b=window.location.href,c=b.split("?");switch(c.length){case 1:return b+"?m=1";case 2:return 0<=c[1].search("(^|&)m=")?null:b+"&m=1";default:return null}}var d=navigator.userAgent;if(-1!=d.indexOf("Mobile")&&-1!=d.indexOf("WebKit")&&-1==d.indexOf("iPad")||-1!=d.indexOf("Opera Mini")||-1!=d.indexOf("IEMobile")){var e=a();e&&window.location.replace(e)};
-</script></head>
+<link href="https://www.blogger.com/dyn-css/authorization.css?targetBlogID=7027711809809520303&amp;zx=5e53a168-8b49-4ea2-ad4b-edf7d5b85bee" rel="stylesheet">
+</head>
 <body>
 <div id="fb-root"></div>
 <script>
@@ -1225,6 +1225,7 @@ Contact Us
 <div class="main section" id="main"><div class="widget Blog" data-version="1" id="Blog1">
 <script src=""></script>
 <div class="blog-posts hfeed">
+<!--Can't find substitution for tag [defaultAdStart]-->
 
                                 <div class="date-outer">
                               
@@ -1303,7 +1304,8 @@ comments
 </p>
 <a href="https://www.blogger.com/comment-iframe.g?blogID=7027711809809520303&amp;pageID=6539614511270128310" id="comment-editor-src"></a>
 <iframe allowtransparency="true" class="blogger-iframe-colorize blogger-comment-from-post" frameborder="0" height="250" id="comment-editor" name="comment-editor" src="" width="600px"></iframe>
-<script type="text/javascript" src="https://www.blogger.com/static/v1/jsbin/3629047462-comment_from_post_iframe.js"></script>
+<!--Can't find substitution for tag [post.friendConnectJs]-->
+<script src="https://www.blogger.com/static/v1/jsbin/3134186057-comment_from_post_iframe.js" type="text/javascript"></script>
 <script type="text/javascript">
                             BLOG_CMT_createIframe('https://www.blogger.com/rpc_relay.html', '09780814270172089175');
                           </script>
@@ -1318,6 +1320,7 @@ comments
 
                               </div></div>
                             
+<!--Can't find substitution for tag [adEnd]-->
 </div>
 <div class="blog-pager" id="blog-pager">
 <a class="home-link" href="http://www.mallumoviereporter.com/">
@@ -1427,7 +1430,7 @@ widgetrc(
               </a>
 </b>
 <br>
-            Copyright © 2012-2016. 
+            Copyright © 2012-2017. 
             <a class="sitename" href="http://www.mallumoviereporter.com/" title="Online Movie And TV Reporter">
 Online Movie And TV Reporter
 </a>
@@ -1476,12 +1479,12 @@ Online Movie And TV Reporter
                  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
                  })();
     </script>
+<script src="https://apis.google.com/js/plusone.js" type="text/javascript"></script>
 
-<script type="text/javascript" src="https://www.blogger.com/static/v1/widgets/803954089-widgets.js"></script>
-<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+<script type="text/javascript" src="https://www.blogger.com/static/v1/widgets/1030149806-widgets.js"></script>
 <script type="text/javascript">
-window['__wavt'] = 'AOuZoY4KdW5QV_Ehc4E8c0TQPUzAMUGD4g:1480835519271';_WidgetManager._Init('//www.blogger.com/rearrange?blogID\x3d7027711809809520303','//www.mallumoviereporter.com/p/privacy-policy_11.html','7027711809809520303');
-_WidgetManager._SetDataContext([{'name': 'blog', 'data': {'blogId': '7027711809809520303', 'bloggerUrl': 'https://www.blogger.com', 'title': 'Online Movie And TV Reporter', 'pageType': 'static_page', 'pageId': '6539614511270128310', 'url': 'http://www.mallumoviereporter.com/p/privacy-policy_11.html', 'canonicalUrl': 'http://www.mallumoviereporter.com/p/privacy-policy_11.html', 'homepageUrl': 'http://www.mallumoviereporter.com/', 'searchUrl': 'http://www.mallumoviereporter.com/search', 'canonicalHomepageUrl': 'http://www.mallumoviereporter.com/', 'blogspotFaviconUrl': 'http://www.mallumoviereporter.com/favicon.ico', 'hasCustomDomain': true, 'enabledCommentProfileImages': true, 'gPlusViewType': 'FILTERED_POSTMOD', 'adultContent': false, 'analyticsAccountNumber': '', 'useUniversalAnalytics': false, 'pageName': 'Privacy Policy', 'pageTitle': 'Online Movie And TV Reporter: Privacy Policy', 'metaDescription': '', 'encoding': 'UTF-8', 'locale': 'en_GB', 'localeUnderscoreDelimited': 'en_gb', 'isPrivate': false, 'isMobile': false, 'isMobileRequest': false, 'mobileClass': '', 'isPrivateBlog': false, 'languageDirection': 'ltr', 'feedLinks': '\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Online Movie And TV Reporter - Atom\x22 href\x3d\x22http://www.mallumoviereporter.com/feeds/posts/default\x22 /\x3e\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/rss+xml\x22 title\x3d\x22Online Movie And TV Reporter - RSS\x22 href\x3d\x22http://www.mallumoviereporter.com/feeds/posts/default?alt\x3drss\x22 /\x3e\n\x3clink rel\x3d\x22service.post\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Online Movie And TV Reporter - Atom\x22 href\x3d\x22https://www.blogger.com/feeds/7027711809809520303/posts/default\x22 /\x3e\n', 'meTag': '', 'openIdOpTag': '', 'mobileHeadScript': '', 'adsenseHostId': 'ca-host-pub-1556223355139109', 'view': '', 'dynamicViewsCommentsSrc': '//www.blogblog.com/dynamicviews/4224c15c4e7c9321/js/comments.js', 'dynamicViewsScriptSrc': '//www.blogblog.com/dynamicviews/913ced53bff7a6e2', 'plusOneApiSrc': 'https://apis.google.com/js/plusone.js', 'sharing': {'platforms': [{'name': 'Get link', 'key': 'link', 'shareMessage': 'Get link', 'target': ''}, {'name': 'Facebook', 'key': 'facebook', 'shareMessage': 'Share to Facebook', 'target': 'facebook'}, {'name': 'BlogThis!', 'key': 'blogThis', 'shareMessage': 'BlogThis!', 'target': 'blog'}, {'name': 'Twitter', 'key': 'twitter', 'shareMessage': 'Share to Twitter', 'target': 'twitter'}, {'name': 'Pinterest', 'key': 'pinterest', 'shareMessage': 'Share to Pinterest', 'target': 'pinterest'}, {'name': 'Google+', 'key': 'googlePlus', 'shareMessage': 'Share to Google+', 'target': 'googleplus'}, {'name': 'Email', 'key': 'email', 'shareMessage': 'Email', 'target': 'email'}], 'googlePlusShareButtonWidth': 300, 'googlePlusBootstrap': '\x3cscript type\x3d\x22text/javascript\x22\x3ewindow.___gcfg \x3d {\x27lang\x27: \x27en_GB\x27};\x3c/script\x3e'}}}, {'name': 'features', 'data': {'widgetVisibility': true}}, {'name': 'messages', 'data': {'linkCopiedToClipboard': 'Link copied to clipboard', 'postLink': 'Post link'}}, {'name': 'template', 'data': {'name': 'custom', 'localizedName': 'Custom', 'isResponsive': false, 'isAlternateRendering': false, 'isCustom': true}}, {'name': 'view', 'data': {'classic': {'name': 'classic', 'url': '?view\x3dclassic'}, 'flipcard': {'name': 'flipcard', 'url': '?view\x3dflipcard'}, 'magazine': {'name': 'magazine', 'url': '?view\x3dmagazine'}, 'mosaic': {'name': 'mosaic', 'url': '?view\x3dmosaic'}, 'sidebar': {'name': 'sidebar', 'url': '?view\x3dsidebar'}, 'snapshot': {'name': 'snapshot', 'url': '?view\x3dsnapshot'}, 'timeslide': {'name': 'timeslide', 'url': '?view\x3dtimeslide'}, 'isMobile': false, 'title': 'Privacy Policy', 'description': 'Malayalam TV Serials | Malayalam Movie News | New Malayalam Movie News | Malayalam TV Shows | Malayalam Movie Trailers', 'url': 'http://www.mallumoviereporter.com/p/privacy-policy_11.html', 'type': 'item', 'isSingleItem': true, 'isMultipleItems': false, 'isError': false, 'isPage': true, 'isPost': false, 'isHomepage': false, 'isArchive': false, 'isSearch': false, 'isLabelSearch': false, 'pageId': 6539614511270128310}}]);
+window['__wavt'] = 'AOuZoY4ykxCAOgZXdtlYof0b824TRZUV9w:1496317064149';_WidgetManager._Init('//www.blogger.com/rearrange?blogID\x3d7027711809809520303','//www.mallumoviereporter.com/p/privacy-policy_11.html','7027711809809520303');
+_WidgetManager._SetDataContext([{'name': 'blog', 'data': {'blogId': '7027711809809520303', 'title': 'Online Movie And TV Reporter', 'url': 'http://www.mallumoviereporter.com/p/privacy-policy_11.html', 'canonicalUrl': 'http://www.mallumoviereporter.com/p/privacy-policy_11.html', 'homepageUrl': 'http://www.mallumoviereporter.com/', 'searchUrl': 'http://www.mallumoviereporter.com/search', 'canonicalHomepageUrl': 'http://www.mallumoviereporter.com/', 'blogspotFaviconUrl': 'http://www.mallumoviereporter.com/favicon.ico', 'bloggerUrl': 'https://www.blogger.com', 'hasCustomDomain': true, 'httpsEnabled': false, 'enabledCommentProfileImages': true, 'gPlusViewType': 'FILTERED_POSTMOD', 'adultContent': false, 'analyticsAccountNumber': '', 'encoding': 'UTF-8', 'locale': 'en-GB', 'localeUnderscoreDelimited': 'en_gb', 'languageDirection': 'ltr', 'isPrivate': false, 'isMobile': false, 'isMobileRequest': false, 'mobileClass': '', 'isPrivateBlog': false, 'feedLinks': '\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Online Movie And TV Reporter - Atom\x22 href\x3d\x22http://www.mallumoviereporter.com/feeds/posts/default\x22 /\x3e\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/rss+xml\x22 title\x3d\x22Online Movie And TV Reporter - RSS\x22 href\x3d\x22http://www.mallumoviereporter.com/feeds/posts/default?alt\x3drss\x22 /\x3e\n\x3clink rel\x3d\x22service.post\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Online Movie And TV Reporter - Atom\x22 href\x3d\x22https://www.blogger.com/feeds/7027711809809520303/posts/default\x22 /\x3e\n', 'meTag': '', 'openIdOpTag': '', 'mobileHeadScript': '', 'adsenseClientId': 'ca-pub-9642215033734970', 'adsenseHostId': 'ca-host-pub-1556223355139109', 'adsenseHasAds': false, 'view': '', 'dynamicViewsCommentsSrc': '//www.blogblog.com/dynamicviews/4224c15c4e7c9321/js/comments.js', 'dynamicViewsScriptSrc': '//www.blogblog.com/dynamicviews/bb3e51dc16331735', 'plusOneApiSrc': 'https://apis.google.com/js/plusone.js', 'sharing': {'platforms': [{'name': 'Get link', 'key': 'link', 'shareMessage': 'Get link', 'target': ''}, {'name': 'Facebook', 'key': 'facebook', 'shareMessage': 'Share to Facebook', 'target': 'facebook'}, {'name': 'BlogThis!', 'key': 'blogThis', 'shareMessage': 'BlogThis!', 'target': 'blog'}, {'name': 'Twitter', 'key': 'twitter', 'shareMessage': 'Share to Twitter', 'target': 'twitter'}, {'name': 'Pinterest', 'key': 'pinterest', 'shareMessage': 'Share to Pinterest', 'target': 'pinterest'}, {'name': 'Google+', 'key': 'googlePlus', 'shareMessage': 'Share to Google+', 'target': 'googleplus'}, {'name': 'Email', 'key': 'email', 'shareMessage': 'Email', 'target': 'email'}], 'googlePlusShareButtonWidth': 300, 'googlePlusBootstrap': '\x3cscript type\x3d\x22text/javascript\x22\x3ewindow.___gcfg \x3d {\x27lang\x27: \x27en_GB\x27};\x3c/script\x3e'}, 'jumpLinkMessage': 'Read more &#187;', 'pageType': 'static_page', 'pageId': '6539614511270128310', 'pageName': 'Privacy Policy', 'pageTitle': 'Online Movie And TV Reporter: Privacy Policy', 'metaDescription': ''}}, {'name': 'features', 'data': {'ga_social_hooks': 'false', 'unsupported_browser_message': 'false', 'lightbox_img_parsing': 'false', 'sharing_get_link_dialog': 'false'}}, {'name': 'messages', 'data': {'edit': 'Edit', 'linkCopiedToClipboard': 'Link copied to clipboard', 'ok': 'Ok', 'postLink': 'Post link'}}, {'name': 'template', 'data': {'name': 'custom', 'localizedName': 'Custom', 'isResponsive': false, 'isAlternateRendering': false, 'isCustom': true}}, {'name': 'view', 'data': {'classic': {'name': 'classic', 'url': '?view\x3dclassic'}, 'flipcard': {'name': 'flipcard', 'url': '?view\x3dflipcard'}, 'magazine': {'name': 'magazine', 'url': '?view\x3dmagazine'}, 'mosaic': {'name': 'mosaic', 'url': '?view\x3dmosaic'}, 'sidebar': {'name': 'sidebar', 'url': '?view\x3dsidebar'}, 'snapshot': {'name': 'snapshot', 'url': '?view\x3dsnapshot'}, 'timeslide': {'name': 'timeslide', 'url': '?view\x3dtimeslide'}, 'isMobile': false, 'title': 'Privacy Policy', 'description': 'Malayalam TV Serials | Malayalam Movie News | New Malayalam Movie News | Malayalam TV Shows | Malayalam Movie Trailers', 'url': 'http://www.mallumoviereporter.com/p/privacy-policy_11.html', 'type': 'item', 'isSingleItem': true, 'isMultipleItems': false, 'isError': false, 'isPage': true, 'isPost': false, 'isHomepage': false, 'isArchive': false, 'isLabelSearch': false, 'pageId': 6539614511270128310}}]);
 _WidgetManager._RegisterWidget('_HeaderView', new _WidgetInfo('Header1', 'header', null, document.getElementById('Header1'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML3', 'header2', null, document.getElementById('HTML3'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_PageListView', new _WidgetInfo('PageList1', 'page', null, document.getElementById('PageList1'), {'title': 'Pages', 'links': [{'isCurrentPage': false, 'href': 'http://www.mallumoviereporter.com/', 'title': 'Home'}, {'isCurrentPage': false, 'href': 'http://www.mallumoviereporter.com/p/disclaimer_8.html', 'id': '6697202269480172481', 'title': 'Disclaimer'}, {'isCurrentPage': true, 'href': 'http://www.mallumoviereporter.com/p/privacy-policy_11.html', 'id': '6539614511270128310', 'title': 'Privacy Policy'}, {'isCurrentPage': false, 'href': 'http://www.mallumoviereporter.com/p/advertise-with-us.html', 'id': '6494201313180814690', 'title': 'Advertise With Us!'}, {'isCurrentPage': false, 'href': 'http://www.mallumoviereporter.com/p/contact-us_27.html', 'id': '1488342928152721382', 'title': 'Contact Us'}], 'mobile': false}, 'displayModeFull'));
@@ -1492,7 +1495,7 @@ _WidgetManager._RegisterWidget('_NavbarView', new _WidgetInfo('Navbar1', 'midle'
 _WidgetManager._RegisterWidget('_AttributionView', new _WidgetInfo('Attribution1', 'midle', null, document.getElementById('Attribution1'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML10', 'midle-2', null, document.getElementById('HTML10'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML7', 'midle-2', null, document.getElementById('HTML7'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_BlogView', new _WidgetInfo('Blog1', 'main', null, document.getElementById('Blog1'), {'cmtInteractionsEnabled': false, 'lightboxEnabled': true, 'lightboxModuleUrl': 'https://www.blogger.com/static/v1/jsbin/3060300543-lbx__en_gb.js', 'lightboxCssUrl': 'https://www.blogger.com/static/v1/v-css/368954415-lightbox_bundle.css'}, 'displayModeFull'));
+_WidgetManager._RegisterWidget('_BlogView', new _WidgetInfo('Blog1', 'main', null, document.getElementById('Blog1'), {'cmtInteractionsEnabled': false, 'lightboxEnabled': true, 'lightboxModuleUrl': 'https://www.blogger.com/static/v1/jsbin/1073670082-lbx__en_gb.js', 'lightboxCssUrl': 'https://www.blogger.com/static/v1/v-css/368954415-lightbox_bundle.css'}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML4', 'sidebar', null, document.getElementById('HTML4'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML6', 'sidebar', null, document.getElementById('HTML6'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML2', 'sidebar', null, document.getElementById('HTML2'), {}, 'displayModeFull'));
